# poc-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml
api/: pyproject.toml
api/src/poc_api/: context.py  crud.py  database.py  main.py  queries.py  schemas.py
api/src/poc_api/seed/: seed.py  seed.trig
api/tests/: test_crud.py  test_queries.py
